tests/ui/parser/new-unicode-escapes-4.rs
pub fn main() {
    let s = "\u{lol}";
     //~^ ERROR invalid character in unicode escape: `l`
}

// ferrocene-annotations: fls_ypa86oqxhn9u
// Character Literals
